Titolo e immagine da java

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
 
     <div id="root">
-
+        <h1 :class="classeDinamica">{{titolo}}</h1>
+        <img :src="imgDinamica" alt="Immagine">
+        
     </div>
 
 
